# designate_ext_instance_fqdn

./: MANIFEST.in  README.rst  requirements.txt  setup.cfg
designate_ext_instance_fqdn_handler/notification_handler/: instance_fqdn.py
