[metadata]
name = designate-ext-instance-fqdn-handler
summary = Sample Designate Handler Extension
description-file =
    README.rst
author = Dario Zanzico
author-email = dario.zanzico@immobiliare.it
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages = designate_ext_instance_fqdn_handler

[entry_points]
designate.notification.handler =
    instance_fqdn_handlers = designate_ext_instance_fqdn_handler.notification_handler.instance_fqdn:InstanceFQDNHandler

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = designate-ext-instance-fqdn-handler/locale
domain = designate-ext-instance-fqdn-handler

[update_catalog]
domain = designate-ext-instance-fqdn-handler
output_dir = designate-ext-instance-fqdn-handler/locale
input_file = designate-ext-instance-fqdn-handler/locale/designate-ext-instance-fqdn-handler.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = designate-ext-instance-fqdn-handler/locale/designate-ext-instance-fqdn-handler.pot
